kajit/tests/snapshots/generated_synthetic__generated_postreg_disasm_json_all_integers_aarch64.snap
---
source: kajit/tests/generated_synthetic.rs
expression: disasm
---
> sub sp, sp, #0x190
  stp x29, x30, [sp]
  stp x19, x20, [sp, #0x10]
  stp x21, x22, [sp, #0x20]
  stp x23, x24, [sp, #0x30]
  stp x25, x26, [sp, #0x40]
  mov x29, sp
  mov x21, x0
  mov x22, x1
  ldr x19, [x22]
  ldr x20, [x22, #0x8]
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x8d0
  mov x9, #<imm>
  mov x23, x9
  mov x9, #<imm>
  mov x24, x9
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0x170]
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x88c
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x874
  ldrb w9, [x19]
  mov x11, x9
  cmp x11, x24
  b.ne $+0x18
  add x19, x19, #0x1
  mov x11, x23
  mov x11, x23
  ldr x12, [sp, #0x170]
  b $+0x814
  mov x9, #<imm>
  mov x24, x9
  str x24, [sp, #0x60]
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x25, x9
  str x25, [sp, #0x68]
  mov x9, #<imm>
  mov x26, x9
  str x26, [sp, #0x70]
  mov x9, #<imm>
  mov x11, x9
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x26, x9
  str x26, [sp, #0x88]
  mov x9, #<imm>
  mov x26, x9
  str x26, [sp, #0x90]
  mov x9, #<imm>
  mov x26, x9
  str x26, [sp, #0xa0]
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x25, x9
  str x25, [sp, #0xa8]
  mov x9, #<imm>
  mov x26, x9
  str x26, [sp, #0xb0]
  mov x9, #<imm>
  mov x26, x9
  str x26, [sp, #0xc0]
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x25, x9
  str x25, [sp, #0xc8]
  mov x9, #<imm>
  mov x26, x9
  str x26, [sp, #0xd0]
  mov x9, #<imm>
  mov x26, x9
  str x26, [sp, #0xe0]
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x25, x9
  str x25, [sp, #0xe8]
  mov x9, #<imm>
  mov x26, x9
  str x26, [sp, #0xf0]
  mov x9, #<imm>
  mov x26, x9
  str x26, [sp, #0x100]
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x25, x9
  str x25, [sp, #0x108]
  mov x9, #<imm>
  mov x26, x9
  str x26, [sp, #0x110]
  mov x9, #<imm>
  mov x26, x9
  str x26, [sp, #0x120]
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x25, x9
  str x25, [sp, #0x128]
  mov x9, #<imm>
  mov x26, x9
  str x26, [sp, #0x130]
  mov x9, #<imm>
  mov x26, x9
  str x26, [sp, #0x140]
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x26, x9
  str x26, [sp, #0x148]
  mov x9, #<imm>
  mov x26, x9
  str x26, [sp, #0x150]
  mov x9, #<imm>
  mov x25, x9
  str x25, [sp, #0x160]
  mov x9, #<imm>
  mov x26, x9
  ldr x12, [sp, #0x60]
  str x26, [sp, #0x168]
  cmp x12, x11
  cset x24, ne
  str x24, [sp, #0x80]
  mov x12, x23
  add x9, sp, #0x50
  mov x11, x9
  add x9, sp, #0x58
  mov x12, x9
  str x19, [x22]
  mov x0, x22
  mov x1, x11
  mov x2, x12
  add x3, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x688
  ldr x9, [sp, #0x50]
  mov x11, x9
  mov x24, x11
  ldr x9, [sp, #0x58]
  mov x26, x9
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x64c
  ldr x11, [sp, #0x68]
  mov x23, x24
  ldr x25, [sp, #0x70]
  mov x0, x23
  mov x1, x26
  mov x2, x11
  mov x3, x25
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x24, x0
  str x24, [sp, #0x78]
  ldr x25, [sp, #0x90]
  ldr x11, [sp, #0x88]
  mov x0, x23
  mov x1, x26
  mov x2, x11
  mov x3, x25
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x24, x0
  str x24, [sp, #0x98]
  ldr x25, [sp, #0xb0]
  ldr x11, [sp, #0xa8]
  mov x0, x23
  mov x1, x26
  mov x2, x11
  mov x3, x25
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x24, x0
  str x24, [sp, #0xb8]
  ldr x25, [sp, #0xd0]
  ldr x11, [sp, #0xc8]
  mov x0, x23
  mov x1, x26
  mov x2, x11
  mov x3, x25
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x24, x0
  str x24, [sp, #0xd8]
  ldr x25, [sp, #0xf0]
  ldr x11, [sp, #0xe8]
  mov x0, x23
  mov x1, x26
  mov x2, x11
  mov x3, x25
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x24, x0
  str x24, [sp, #0xf8]
  ldr x25, [sp, #0x110]
  ldr x11, [sp, #0x108]
  mov x0, x23
  mov x1, x26
  mov x2, x11
  mov x3, x25
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x24, x0
  str x24, [sp, #0x118]
  ldr x24, [sp, #0x128]
  ldr x11, [sp, #0x130]
  mov x0, x23
  mov x1, x26
  mov x2, x24
  mov x3, x11
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x25, x0
  str x25, [sp, #0x138]
  ldr x24, [sp, #0x150]
  ldr x11, [sp, #0x148]
  mov x0, x23
  mov x1, x26
  mov x2, x11
  mov x3, x24
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x25, x0
  ldr x11, [sp, #0x80]
  ldr x13, [sp, #0x78]
  str x25, [sp, #0x158]
  mov x12, x13
  and x12, x12, x11
  cbnz x12, $+0x18
  ldr x24, [sp, #0x178]
  ldr x11, [sp, #0x60]
  mov x15, x11
  ldr x11, [sp, #0xa0]
  b $+0x48
  ldr x24, [sp, #0x178]
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x1c
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x474
  mov x9, #<imm>
  mov x14, x9
  mov x9, #<imm>
  mov x23, x9
  orr x24, x24, x14
  mov x15, x23
  cmp x15, x11
  cset x12, ne
  str x11, [sp, #0xa0]
  ldr x11, [sp, #0x98]
  and x11, x11, x12
  cbnz x11, $+0x18
  mov x23, x24
  mov x12, x15
  ldr x11, [sp, #0xc0]
  mov x12, x15
  b $+0x48
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x18
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x408
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  orr x12, x12, x24
  mov x23, x12
  mov x12, x11
  cmp x12, x11
  cset x13, ne
  str x11, [sp, #0xc0]
  ldr x11, [sp, #0xb8]
  and x11, x11, x13
  cbnz x11, $+0x14
  mov x11, x12
  mov x11, x12
  ldr x12, [sp, #0xe0]
  b $+0x44
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x10
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x39c
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  orr x12, x12, x23
  mov x23, x12
  cmp x11, x12
  cset x24, ne
  str x12, [sp, #0xe0]
  ldr x12, [sp, #0xd8]
  and x24, x24, x12
  cbnz x24, $+0x18
  mov x25, x23
  mov x12, x11
  mov x12, x11
  ldr x11, [sp, #0x100]
  b $+0x4c
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x330
  mov x9, #<imm>
  mov x26, x9
  mov x9, #<imm>
  mov x11, x9
  mov x12, x23
  orr x12, x12, x26
  mov x25, x12
  mov x12, x11
  cmp x12, x11
  cset x13, ne
  str x11, [sp, #0x100]
  ldr x11, [sp, #0xf8]
  and x11, x11, x13
  cbnz x11, $+0x18
  mov x23, x25
  mov x11, x12
  mov x11, x12
  ldr x24, [sp, #0x120]
  b $+0x44
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x1d
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x2bc
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  orr x12, x12, x25
  mov x23, x12
  cmp x11, x24
  cset x12, ne
  ldr x13, [sp, #0x118]
  str x24, [sp, #0x120]
  and x12, x12, x13
  cbnz x12, $+0x14
  mov x14, x11
  mov x14, x11
  ldr x25, [sp, #0x140]
  b $+0x44
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x1a
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x254
  mov x9, #<imm>
  mov x13, x9
  mov x9, #<imm>
  mov x24, x9
  orr x23, x23, x13
  mov x14, x24
  cmp x14, x25
  cset x11, ne
  ldr x24, [sp, #0x138]
  and x11, x11, x24
  cbnz x11, $+0x18
  mov x24, x23
  mov x11, x14
  mov x11, x14
  ldr x23, [sp, #0x160]
  b $+0x44
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x14
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x1ec
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  orr x12, x12, x23
  mov x24, x12
  cmp x11, x23
  cset x12, ne
  ldr x13, [sp, #0x158]
  and x12, x12, x13
  cbnz x12, $+0x14
  mov x26, x24
  mov x12, x11
  mov x12, x11
  b $+0x48
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x8
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x188
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  orr x12, x12, x24
  mov x26, x12
  mov x12, x11
  cbnz x12, $+0x38
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x140
  mov x24, x26
  mov x24, x26
  b $+0x8
  mov x24, x26
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x108
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xf0
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xd8
  ldrb w9, [x19]
  mov x11, x9
  add x19, x19, #0x1
  ldr x26, [sp, #0x168]
  cmp x11, x26
  cset x12, ne
  cbnz x12, $+0x18
  mov x9, #<imm>
  mov x11, x9
  mov x12, x24
  mov x12, x24
  b $+0x60
  mov x9, #<imm>
  mov x12, x9
  mov x10, #<imm>
  cmp x11, x10
  b.ne $+0x18
  mov x9, #<imm>
  mov x11, x9
  mov x12, x24
  mov x12, x24
  b $+0x38
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x58
  mov x9, #<imm>
  mov x11, x9
  mov x12, x24
  mov x24, x12
  cbnz x11, $+0x60
  mov x11, x24
  and x11, x11, x12
  cmp x11, x12
  b.ne $+0x8
  b $+0x10
  mov w9, #0xa
  str w9, [x22, #0x10]
  b $+0x24
  str x19, [x22]
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x190
  ret
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x190
  ret
