kajit/tests/snapshots/generated_synthetic__generated_postreg_disasm_json_bool_field_aarch64.snap
---
source: kajit/tests/generated_synthetic.rs
expression: disasm
---
> sub sp, sp, #0xa0
  stp x29, x30, [sp]
  stp x19, x20, [sp, #0x10]
  stp x21, x22, [sp, #0x20]
  stp x23, x24, [sp, #0x30]
  stp x25, x26, [sp, #0x40]
  mov x29, sp
  mov x21, x0
  mov x22, x1
  ldr x19, [x22]
  ldr x20, [x22, #0x8]
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x354
  mov x9, #<imm>
  mov x25, x9
  mov x9, #<imm>
  mov x24, x9
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0x88]
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x310
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x2f8
  ldrb w9, [x19]
  mov x11, x9
  cmp x11, x24
  b.ne $+0x18
  add x19, x19, #0x1
  mov x11, x25
  mov x11, x25
  ldr x12, [sp, #0x88]
  b $+0x298
  mov x9, #<imm>
  mov x23, x9
  str x23, [sp, #0x60]
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x26, x9
  str x26, [sp, #0x68]
  mov x9, #<imm>
  mov x24, x9
  str x24, [sp, #0x70]
  mov x9, #<imm>
  mov x11, x9
  mov x9, #<imm>
  mov x26, x9
  ldr x12, [sp, #0x60]
  str x26, [sp, #0x80]
  cmp x12, x11
  cset x24, ne
  str x24, [sp, #0x78]
  mov x11, x25
  add x9, sp, #0x50
  mov x24, x9
  add x9, sp, #0x58
  mov x26, x9
  str x19, [x22]
  mov x0, x22
  mov x1, x24
  mov x2, x26
  add x3, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x240
  ldr x9, [sp, #0x50]
  mov x26, x9
  ldr x9, [sp, #0x58]
  mov x24, x9
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x208
  ldr x23, [sp, #0x70]
  ldr x25, [sp, #0x68]
  mov x0, x26
  mov x1, x24
  mov x2, x25
  mov x3, x23
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x24, x0
  ldr x11, [sp, #0x78]
  mov x12, x24
  and x12, x12, x11
  cbnz x12, $+0x18
  ldr x23, [sp, #0x90]
  mov x26, x23
  ldr x24, [sp, #0x60]
  mov x11, x24
  b $+0x4c
  ldr x23, [sp, #0x90]
  ldr x24, [sp, #0x60]
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x188
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  orr x12, x12, x23
  mov x26, x12
  cbnz x11, $+0x38
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x144
  mov x25, x26
  mov x25, x26
  b $+0x8
  mov x25, x26
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x10c
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xf4
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xdc
  ldrb w9, [x19]
  mov x11, x9
  add x19, x19, #0x1
  ldr x26, [sp, #0x80]
  cmp x11, x26
  cset x12, ne
  cbnz x12, $+0x1c
  mov x9, #<imm>
  mov x14, x9
  mov x11, x14
  mov x12, x25
  mov x12, x25
  b $+0x60
  mov x9, #<imm>
  mov x23, x9
  mov x10, #<imm>
  cmp x11, x10
  b.ne $+0x18
  mov x9, #<imm>
  mov x11, x9
  mov x12, x25
  mov x12, x25
  b $+0x38
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x58
  mov x9, #<imm>
  mov x11, x9
  mov x12, x25
  mov x23, x12
  cbnz x11, $+0x60
  mov x11, x23
  and x11, x11, x12
  cmp x11, x12
  b.ne $+0x8
  b $+0x10
  mov w9, #0xa
  str w9, [x22, #0x10]
  b $+0x24
  str x19, [x22]
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0xa0
  ret
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0xa0
  ret
