kajit/tests/snapshots/generated_synthetic__generated_postreg_disasm_json_deep_struct_aarch64.snap
---
source: kajit/tests/generated_synthetic.rs
expression: disasm
---
> sub sp, sp, #0x190
  stp x29, x30, [sp]
  stp x19, x20, [sp, #0x10]
  stp x21, x22, [sp, #0x20]
  stp x23, x24, [sp, #0x30]
  stp x25, x26, [sp, #0x40]
  mov x29, sp
  mov x21, x0
  mov x22, x1
  ldr x19, [x22]
  ldr x20, [x22, #0x8]
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0xb64
  mov x9, #<imm>
  mov x23, x9
  mov x9, #<imm>
  mov x24, x9
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0xd8]
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0xb20
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xb08
  ldrb w9, [x19]
  mov x11, x9
  cmp x11, x24
  b.ne $+0x18
  add x19, x19, #0x1
  mov x12, x23
  ldr x11, [sp, #0xd8]
  mov x12, x23
  b $+0xaa8
  mov x9, #<imm>
  mov x25, x9
  str x25, [sp, #0x80]
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x26, x9
  str x26, [sp, #0x88]
  mov x9, #<imm>
  mov x26, x9
  str x26, [sp, #0x90]
  mov x9, #<imm>
  mov x11, x9
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x26, x9
  str x26, [sp, #0xb0]
  mov x9, #<imm>
  mov x24, x9
  str x24, [sp, #0xb8]
  mov x9, #<imm>
  mov x26, x9
  str x26, [sp, #0xc8]
  mov x9, #<imm>
  mov x12, x9
  str x12, [sp, #0xd0]
  cmp x25, x11
  cset x24, ne
  str x24, [sp, #0x98]
  add x9, sp, #0x50
  mov x11, x9
  add x9, sp, #0x58
  mov x12, x9
  str x19, [x22]
  mov x0, x22
  mov x1, x11
  mov x2, x12
  add x3, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0xa2c
  ldr x9, [sp, #0x50]
  mov x11, x9
  mov x24, x11
  ldr x9, [sp, #0x58]
  mov x25, x9
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x9f0
  ldr x11, [sp, #0x88]
  ldr x12, [sp, #0x90]
  mov x0, x24
  mov x1, x25
  mov x2, x11
  mov x3, x12
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x26, x0
  ldr x11, [sp, #0xb0]
  ldr x12, [sp, #0xb8]
  mov x0, x24
  mov x1, x25
  mov x2, x11
  mov x3, x12
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x24, x0
  ldr x11, [sp, #0x98]
  str x24, [sp, #0xc0]
  mov x12, x26
  and x12, x12, x11
  cbnz x12, $+0x10
  ldr x11, [sp, #0x80]
  ldr x12, [sp, #0xc8]
  b $+0x79c
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x950
  mov x9, #<imm>
  mov x24, x9
  mov x9, #<imm>
  mov x26, x9
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0x138]
  mov x9, #<imm>
  mov x25, x9
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0xa8]
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x8f8
  orr x25, x25, x23
  str x25, [sp, #0xa0]
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x8d8
  ldrb w9, [x19]
  mov x11, x9
  cmp x11, x26
  b.ne $+0x18
  add x19, x19, #0x1
  mov x23, x24
  ldr x12, [sp, #0x138]
  mov x23, x24
  b $+0x6a8
  mov x9, #<imm>
  mov x25, x9
  str x25, [sp, #0xe0]
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x25, x9
  str x25, [sp, #0xe8]
  mov x9, #<imm>
  mov x25, x9
  str x25, [sp, #0xf0]
  mov x9, #<imm>
  mov x11, x9
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x25, x9
  str x25, [sp, #0x110]
  mov x9, #<imm>
  mov x25, x9
  str x25, [sp, #0x118]
  mov x9, #<imm>
  mov x12, x9
  str x12, [sp, #0x128]
  mov x9, #<imm>
  mov x23, x9
  ldr x25, [sp, #0xe0]
  str x23, [sp, #0x130]
  cmp x25, x11
  cset x11, ne
  str x11, [sp, #0xf8]
  mov x12, x24
  add x9, sp, #0x60
  mov x11, x9
  add x9, sp, #0x68
  mov x12, x9
  str x19, [x22]
  mov x0, x22
  mov x1, x11
  mov x2, x12
  add x3, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x7f4
  ldr x9, [sp, #0x60]
  mov x11, x9
  mov x23, x11
  ldr x9, [sp, #0x68]
  mov x24, x9
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x7b8
  ldr x11, [sp, #0xe8]
  ldr x25, [sp, #0xf0]
  mov x0, x23
  mov x1, x24
  mov x2, x11
  mov x3, x25
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x26, x0
  ldr x25, [sp, #0x118]
  ldr x11, [sp, #0x110]
  mov x0, x23
  mov x1, x24
  mov x2, x11
  mov x3, x25
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x23, x0
  ldr x11, [sp, #0xf8]
  str x23, [sp, #0x120]
  mov x12, x26
  and x12, x12, x11
  cbnz x12, $+0x1c
  ldr x25, [sp, #0x170]
  mov x23, x25
  ldr x11, [sp, #0xe0]
  mov x25, x11
  ldr x11, [sp, #0x128]
  b $+0x38c
  ldr x25, [sp, #0x170]
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x708
  mov x9, #<imm>
  mov x24, x9
  mov x9, #<imm>
  mov x23, x9
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0x168]
  mov x9, #<imm>
  mov x26, x9
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0x108]
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x6b0
  orr x25, x25, x26
  str x25, [sp, #0x100]
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x690
  ldrb w9, [x19]
  mov x11, x9
  cmp x11, x23
  b.ne $+0x18
  add x19, x19, #0x1
  mov x11, x24
  mov x11, x24
  ldr x13, [sp, #0x168]
  b $+0x298
  mov x9, #<imm>
  mov x23, x9
  str x23, [sp, #0x140]
  mov x9, #<imm>
  movk x9, #<imm>, lsl #16
  movk x9, #<imm>, lsl #32
  mov x26, x9
  str x26, [sp, #0x148]
  mov x9, #<imm>
  mov x11, x9
  str x11, [sp, #0x150]
  mov x9, #<imm>
  mov x14, x9
  mov x9, #<imm>
  mov x26, x9
  str x26, [sp, #0x160]
  cmp x23, x14
  cset x25, ne
  str x25, [sp, #0x158]
  mov x12, x24
  add x9, sp, #0x70
  mov x11, x9
  add x9, sp, #0x78
  mov x13, x9
  str x19, [x22]
  mov x0, x22
  mov x1, x11
  mov x2, x13
  add x3, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x5dc
  ldr x9, [sp, #0x70]
  mov x24, x9
  ldr x9, [sp, #0x78]
  mov x25, x9
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x5a4
  ldr x23, [sp, #0x148]
  ldr x26, [sp, #0x150]
  mov x0, x24
  mov x1, x25
  mov x2, x23
  mov x3, x26
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  mov x24, x0
  ldr x11, [sp, #0x158]
  mov x12, x24
  and x12, x12, x11
  cbnz x12, $+0x18
  ldr x23, [sp, #0x178]
  mov x24, x23
  ldr x12, [sp, #0x140]
  mov x11, x12
  b $+0x48
  ldr x23, [sp, #0x178]
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x528
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  orr x12, x12, x23
  mov x24, x12
  cbnz x11, $+0x38
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x4e4
  mov x23, x24
  mov x23, x24
  b $+0x8
  mov x23, x24
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x4ac
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x494
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x47c
  ldrb w9, [x19]
  mov x11, x9
  add x19, x19, #0x1
  ldr x25, [sp, #0x160]
  cmp x11, x25
  cset x12, ne
  cbnz x12, $+0x18
  mov x9, #<imm>
  mov x11, x9
  mov x12, x23
  mov x12, x23
  b $+0x6c
  mov x9, #<imm>
  mov x12, x9
  mov x10, #<imm>
  cmp x11, x10
  b.ne $+0x1c
  mov x9, #<imm>
  mov x13, x9
  mov x24, x13
  mov x26, x23
  mov x26, x23
  b $+0x38
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x3f8
  mov x9, #<imm>
  mov x24, x9
  mov x26, x23
  mov x11, x24
  mov x12, x26
  mov x23, x12
  cbnz x11, $+0xf98
  mov x11, x23
  and x11, x11, x13
  cmp x11, x13
  b.ne $+0x8
  b $+0x10
  mov w9, #0xa
  str w9, [x22, #0x10]
  b $+0x3bc
  ldr x0, [sp, #0x100]
  mov x23, x0
  ldr x1, [sp, #0x108]
  mov x25, x1
  cmp x25, x11
  cset x12, ne
  ldr x2, [sp, #0x120]
  str x11, [sp, #0x128]
  mov x11, x2
  and x11, x11, x12
  cbnz x11, $+0x14
  mov x24, x23
  mov x11, x25
  mov x11, x25
  b $+0x44
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x4
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x358
  mov x9, #<imm>
  mov x12, x9
  mov x9, #<imm>
  mov x11, x9
  orr x12, x12, x23
  mov x24, x12
  cbnz x11, $+0x38
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x314
  mov x23, x24
  mov x23, x24
  b $+0x8
  mov x23, x24
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x2dc
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x2c4
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0x2ac
  ldrb w9, [x19]
  mov x24, x9
  add x19, x19, #0x1
  ldr x26, [sp, #0x130]
  cmp x24, x26
  cset x25, ne
  cbnz x25, $+0x1c
  mov x9, #<imm>
  mov x25, x9
  mov x11, x25
  mov x12, x23
  mov x12, x23
  b $+0x60
  mov x9, #<imm>
  mov x11, x9
  mov x10, #<imm>
  cmp x24, x10
  b.ne $+0x18
  mov x9, #<imm>
  mov x11, x9
  mov x12, x23
  mov x12, x23
  b $+0x38
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x228
  mov x9, #<imm>
  mov x11, x9
  mov x12, x23
  mov x25, x12
  cbnz x11, $+0xe08
  mov x23, x25
  mov x11, x23
  and x11, x11, x12
  cmp x11, x12
  b.ne $+0x8
  b $+0x10
  mov w9, #0xa
  str w9, [x22, #0x10]
  b $+0x1f0
  ldr x14, [sp, #0xa0]
  mov x23, x14
  ldr x15, [sp, #0xa8]
  mov x11, x15
  cmp x11, x12
  cset x13, ne
  ldr x17, [sp, #0xc0]
  str x12, [sp, #0xc8]
  mov x12, x17
  and x12, x12, x13
  cbnz x12, $+0x10
  mov x12, x11
  mov x12, x11
  b $+0x4c
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x8
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x190
  mov x9, #<imm>
  mov x11, x9
  mov x9, #<imm>
  mov x13, x9
  mov x14, x23
  orr x14, x14, x11
  mov x23, x14
  mov x12, x13
  cbnz x12, $+0x38
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x144
  mov x25, x23
  mov x25, x23
  b $+0x8
  mov x25, x23
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x10c
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xf4
  cmp x19, x20
  b.hs $+0x8
  b $+0x10
  mov w9, #0x1
  str w9, [x22, #0x10]
  b $+0xdc
  ldrb w9, [x19]
  mov x11, x9
  add x19, x19, #0x1
  ldr x24, [sp, #0xd0]
  cmp x11, x24
  cset x12, ne
  cbnz x12, $+0x18
  mov x9, #<imm>
  mov x11, x9
  mov x12, x25
  mov x12, x25
  b $+0x64
  mov x23, x25
  mov x9, #<imm>
  mov x12, x9
  mov x10, #<imm>
  cmp x11, x10
  b.ne $+0x18
  mov x9, #<imm>
  mov x11, x9
  mov x12, x23
  mov x12, x23
  b $+0x38
  str x19, [x22]
  mov x0, x22
  add x1, x21, #0x0
  mov x16, #<imm>
  movk x16, #<imm>, lsl #16
  movk x16, #<imm>, lsl #32
  blr x16
  ldr x19, [x22]
  ldr w9, [x22, #0x10]
  cbnz w9, $+0x58
  mov x9, #<imm>
  mov x11, x9
  mov x12, x23
  mov x23, x12
  cbnz x11, $+0xc5c
  mov x12, x23
  and x12, x12, x11
  cmp x12, x11
  b.ne $+0x8
  b $+0x10
  mov w9, #0xa
  str w9, [x22, #0x10]
  b $+0x24
  str x19, [x22]
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x190
  ret
  ldp x25, x26, [sp, #0x40]
  ldp x23, x24, [sp, #0x30]
  ldp x21, x22, [sp, #0x20]
  ldp x19, x20, [sp, #0x10]
  ldp x29, x30, [sp]
  add sp, sp, #0x190
  ret
